--- a/index.html
+++ b/index.html
@@ -114,13 +114,6 @@
 						</figcaption>			
 					</figure>
 					<figure class="effect-sadie">
-						<img src="img/yourteam-digital.jpg" alt="Proyecto: Yourteam.digital"/>
-						<figcaption>
-							<h2>Yourteam.<span>digital</span></h2>
-							<a href="http://yourteam.digital/" target="_blank">Visitar sitio</a>
-						</figcaption>			
-					</figure>
-					<figure class="effect-sadie">
 						<img src="img/hosannavision.jpg" alt="Proyecto: Hosanna Visión"/>
 						<figcaption>
 							<h2>Hosanna <span>Visión</span></h2>
@@ -141,13 +134,24 @@
 							<a href="http://www.tdtparatodos.tv/" target="_blank">Visitar sitio</a>
 						</figcaption>			
 					</figure>
-				</div>					
+				</div>	
+
+				<h2>Wordpress</h2>	
+				<div class="grid">
+					<figure class="effect-sadie">
+						<img src="img/yourteam-digital.jpg" alt="Proyecto: Yourteam.digital"/>
+						<figcaption>
+							<h2>Yourteam.<span>digital</span></h2>
+							<a href="http://yourteam.digital/" target="_blank">Visitar sitio</a>
+						</figcaption>			
+					</figure>	
+				</div>		
 			</div>
 		</div><!-- /container -->
 		<script>
 			[].slice.call( document.querySelectorAll('a[href="#"') ).forEach( function(el) {
 				el.addEventListener( 'click', function(ev) { ev.preventDefault(); } );
 			} );
-		</script>
+		</script> 
 	</body>
 </html>
