--- a/index.html
+++ b/index.html
@@ -74,6 +74,55 @@
 							<a href="http://colgg.edliotest.com/" target="_blank">Visitar sitio</a>
 						</figcaption>			
 					</figure>
+					<figure class="effect-sadie">
+						<img src="img/anglo.jpg" alt="Proyecto: The Anglo"/>
+						<figcaption>
+							<h2>The <span>Anglo</span></h2>
+							<a href="http://thea.edliotest.com/" target="_blank">Visitar sitio</a>
+						</figcaption>			
+					</figure>
+					<figure class="effect-sadie">
+						<img src="img/churchill.jpg" alt="Proyecto: Churchill School Mexico"/>
+						<figcaption>
+							<h2>Churchill <span>School México</span></h2>
+							<a href="http://chusm.edlioschool.com/" target="_blank">Visitar sitio</a>
+						</figcaption>			
+					</figure>
+					<figure class="effect-sadie">
+						<img src="img/green-fields.jpg" alt="Proyecto: Green Fields"/>
+						<figcaption>
+							<h2>Green <span>Fields</span></h2>
+							<a href="http://grefs.edlioschool.com/" target="_blank">Visitar sitio</a>
+						</figcaption>			
+					</figure>
+					<figure class="effect-sadie">
+						<img src="img/junipero.jpg" alt="Proyecto: Junipero"/>
+						<figcaption>
+							<h2><span>Junípero</span></h2>
+							<a href="http://colj.edlioschool.com/" target="_blank">Visitar sitio</a>
+						</figcaption>			
+					</figure>
+					<figure class="effect-sadie">
+						<img src="img/ovalle-monday.jpg" alt="Proyecto: Ovalle Monday"/>
+						<figcaption>
+							<h2>Ovalle <span>Monday</span></h2>
+							<a href="http://colom.edlioschool.com/" target="_blank">Visitar sitio</a>
+						</figcaption>			
+					</figure>
+					<figure class="effect-sadie">
+						<img src="img/oxford.jpg" alt="Proyecto: Oxford"/>
+						<figcaption>
+							<h2><span>Oxford</span></h2>
+							<a href="http://inso.edlioschool.com/" target="_blank">Visitar sitio</a>
+						</figcaption>			
+					</figure>
+					<figure class="effect-sadie">
+						<img src="img/pinecrest.jpg" alt="Proyecto: Pinecrest"/>
+						<figcaption>
+							<h2><span>Pinecrest</span></h2>
+							<a href="http://pini.edlioschool.com/" target="_blank">Visitar sitio</a>
+						</figcaption>			
+					</figure>
 				</div>
 
 				<h2>Drupal</h2>
