--- a/texto.html
+++ b/texto.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Texto</title>
+</head>
+<body>
 ¿Por qué no te has ido después de tanto tiempo? ¿Por qué no te has marchado si sé que te ocurren un montón de cosas mejores que hacer que estar esperando por MÍ? Soy la mujer más aburrido que entretenido, más melodramático que divertido y cuando meto la pata lo hago hasta el fondo. ¿Qué demonios hay en tu mente para que sigas mirándome con alegría los días que te repito que la tristeza existe y que no me deja en paz?<br><br>
 
 Tú eres una persona loca, de esas personas locas que ya no quedan. Perdona por llamarte así, pero hoy no puedo esconderte la verdad. No me apetece, no me da la gana. Hoy no puedo engañarte, no puedo suavizar lo que siento, igual que no lo he hecho cuando no le encontraba sentido a nada. Así que hoy te pido que me escuches. Hay personas a las que siempre podemos regresar. Aunque nos alejemos a años luz y estemos en otra galaxia. Ellas son sinónimo de calidez y de cercanía, son una conexión a primera vista. Una sintonía inquebrantable y única.<br><br> 
@@ -15,4 +22,6 @@ No has dejado en el olvido los buenos momentos y has hablado de ellos con la esp
 
 ##No dejaré que olvides estas palabras porque son tan ciertas como cierto es lo mucho que me valoras. Te las recordaré punto a punto para que entiendas que tus esfuerzos tienen resultados. Que a pesar de que racionalmente no entiendo qué ¿haces aquí? en mi vida, te agradezco profundamente que lo estés:::::::::: <br><br>
 
-##Quizás continúe en otro momento... O quizás no haga falta agregar NADA más.<br><br>
+##Quizás continúe en otro momento... O quizás no haga falta agregar NADA más.<br><br>    
+</body>
+</html>
