--- a/texto.html
+++ b/texto.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Texto</title>
+    <style>body{font-size: 120%}</style>
 </head>
 <body>
 ¿Por qué no te has ido después de tanto tiempo? ¿Por qué no te has marchado si sé que te ocurren un montón de cosas mejores que hacer que estar esperando por MÍ? Soy la mujer más aburrido que entretenido, más melodramático que divertido y cuando meto la pata lo hago hasta el fondo. ¿Qué demonios hay en tu mente para que sigas mirándome con alegría los días que te repito que la tristeza existe y que no me deja en paz?<br><br>
