--- a/texto.html
+++ b/texto.html
@@ -11,7 +11,7 @@
 
 Tú eres una persona loca, de esas personas locas que ya no quedan. Perdona por llamarte así, pero hoy no puedo esconderte la verdad. No me apetece, no me da la gana. Hoy no puedo engañarte, no puedo suavizar lo que siento, igual que no lo he hecho cuando no le encontraba sentido a nada. Así que hoy te pido que me escuches. Hay personas a las que siempre podemos regresar. Aunque nos alejemos a años luz y estemos en otra galaxia. Ellas son sinónimo de calidez y de cercanía, son una conexión a primera vista. Una sintonía inquebrantable y única.<br><br> 
 
-Has sido mi bastón cuando he estado ciego. No te ha importado acompañarme a pesar de que ya sabías que en muchos lugares en los que buscaba no iba a encontrar nada. A pesar de que me lo habías avisado, nunca me dijiste "Te Lo Advertí " Yo sí te quiero decir algo: sin ti no habría llegado hasta aquí y me habría quedado en el fondo, sin ti no habría rebuscado una última bala en mis bolsillos sobre la que cerrar los puños.<br><br>
+Has sido mi bastón cuando he estado ciega. No te ha importado acompañarme a pesar de que ya sabías que en muchos lugares en los que buscaba no iba a encontrar nada. A pesar de que me lo habías avisado, nunca me dijiste "Te Lo Advertí " Yo sí te quiero decir algo: sin ti no habría llegado hasta aquí y me habría quedado en el fondo, sin ti no habría rebuscado una última bala en mis bolsillos sobre la que cerrar los puños.<br><br>
 
 No me has dicho nada a pesar de que mis batallas también te han dejado cicatrices. Marcas que ahora miro y me hacen sentir la fortuna de haber podido contar contigo. Huellas que son pruebas de que te has convertido en una parte de mí, que hemos realizado ese ritual en el que se comparte todo, hasta la sangre…<br><br>
 
