--- a/texto.html
+++ b/texto.html
@@ -18,7 +18,7 @@ No me has dicho nada a pesar de que mis batallas también te han dejado cicatric
 Ni SIQUIERA te ha importado las pocas veces que te digo TE AMO. Y las tantas en que me vuelvo tan pedante y gruñona. También has brindado conmigo y mientras me mirabas a los ojos me preguntabas usando los espacios entre palabras por la próxima. Porque ya me conoces desde hace años y sabes que no voy a cambiar mi esencia, pese a que pueda negociar con ella y hacer algunos cambios. 
 Te he enseñado mi peor cara, aquella de la que estoy del todo menos orgullosa, y te has negado a creer mis palabras cuando te he dicho de buscar otros caminos u otras personas cuando las cosas se ponen feas. No te has creído las pruebas y me has hablado desde la fe que mueve montañas tan orgullosas como la mía, desde la ilusión de pensar que podría darme cuenta de que no todo era muy negro, muy oscuro y muy tenebroso.<br><br>
 
-No has dejado en el olvido los buenos momentos y has hablado de ellos con la esperanza de que fueran un hilo del que tirar. La roca a la que podía agarrarme con la mano que me dejabas libre. No te has ido incluso cuando me he creído manco por la mano que me sujetabas, haciendo un ejercicio de victimismo sub-realista.<br><br> 
+No has dejado en el olvido los buenos momentos y has hablado de ellos con la esperanza de que fueran un hilo del que tirar. La roca a la que podía agarrarme con la mano que me dejabas libre. No te has ido incluso cuando me he creído manca por la mano que me sujetabas, haciendo un ejercicio de victimismo sub-realista.<br><br> 
 
 ¡Para mí también eres importante!<br><br>
 
